--- a/main.html
+++ b/main.html
@@ -9,8 +9,18 @@
 <body>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
+		
 </script>
+<button type="button" class="btn btn-1">1</button>
+<button type="button" class="btn btn-2">2</button>
+<button type="button" class="btn btn-3">3</button>
+<button type="button" class="btn btn-4">4</button>
+<button type="button" class="btn btn-5">5</button>
+<button type="button" class="btn btn-6">6</button>
+<button type="button" class="btn btn-7">7</button>
+<button type="button" class="btn btn-8">8</button>
 
+	<button type="button" class="btn btn-link">Link</button>
 </body>
 
 </html>
