--- a/main.html
+++ b/main.html
@@ -11,16 +11,16 @@
     <script type="text/javascript" src="./script.js">
 		
 </script>
-<button type="button" class="btn btn-1">1</button>
-<button type="button" class="btn btn-2">2</button>
-<button type="button" class="btn btn-3">3</button>
-<button type="button" class="btn btn-4">4</button>
-<button type="button" class="btn btn-5">5</button>
-<button type="button" class="btn btn-6">6</button>
-<button type="button" class="btn btn-7">7</button>
-<button type="button" class="btn btn-8">8</button>
+<button type="button" class="btn btn-Button-1">Button-1</button>
+<button type="button" class="btn btn-Button-2">Button-2</button>
+<button type="button" class="btn btn-Button-3">Button-3</button>
+<button type="button" class="btn btn-Button-4">Button-4</button>
+<button type="button" class="btn btn-Button-5">Button-5</button>
+<button type="button" class="btn btn-Button-6">Button-6</button>
+<button type="button" class="btn btn-Button-7">Button-7</button>
+<button type="button" class="btn btn-Button-8">Button-8</button>
 
-	<button type="button" class="btn btn-link">Link</button>
+	
 </body>
 
 </html>
