--- a/main.html
+++ b/main.html
@@ -11,14 +11,17 @@
     <script type="text/javascript" src="./script.js">
 		
 </script>
-<button type="button" class="btn btn-Button-1">Button-1</button>
-<button type="button" class="btn btn-Button-2">Button-2</button>
-<button type="button" class="btn btn-Button-3">Button-3</button>
-<button type="button" class="btn btn-Button-4">Button-4</button>
-<button type="button" class="btn btn-Button-5">Button-5</button>
-<button type="button" class="btn btn-Button-6">Button-6</button>
-<button type="button" class="btn btn-Button-7">Button-7</button>
-<button type="button" class="btn btn-Button-8">Button-8</button>
+<button type="button" class="btn btn-primary">Button-1</button>
+<button type="button" class="btn btn-secondary">Button-2</button>
+<button type="button" class="btn btn-success">Button-3</button>
+<button type="button" class="btn btn-danger">Button-4</button>
+<div>
+<button type="button" class="btn btn-warning">Button-5</button>
+</div>
+<button type="button" class="btn btn-info">Button-6</button>
+<button type="button" class="btn btn-light">Button-7</button>
+<button type="button" class="btn btn-dark">Button-8</button>
+
 
 	
 </body>
